# ntcl-algorithms

./: Makefile  README.md  build.info
src/modules/: CMakeLists.txt
src/modules/api/: CMakeLists.txt  algorithms_api.f90  algorithms_dev.f90  algorithms_initializer.f90  default_bmm_factory.F90  default_btc_factory.f90  default_btp_factory.f90  default_contraction_factory.F90  default_mm_factory.F90  default_permute_factory.F90  default_update_factory.F90
src/modules/batched_matrix_multiplication/: CMakeLists.txt  batched_matrix_multiplication.f90  batched_matrix_multiplication_api.f90  batched_matrix_multiplication_dev.f90  bmm_factory.f90  pointer_data_bmm_driver.f90  simple_loops_bmm_driver.f90
src/modules/batched_tensor_contraction/: CMakeLists.txt  batched_tensor_contraction.f90  batched_tensor_contraction_api.f90  batched_tensor_contraction_dev.f90  btc_factory.f90  simple_loops_btc_driver.f90
src/modules/batched_tensor_permute/: CMakeLists.txt  batched_tensor_permute.f90  batched_tensor_permute_api.f90  batched_tensor_permute_dev.f90  btp_factory.f90  simple_loops_btp_driver.f90
src/modules/blas/: blas_mm_driver.f90  blas_plugin.f90
src/modules/cublas/: cublas_mm_driver.f90  cublas_wrapper.f90  cuda_wrapper.cu
src/modules/cuda_mm/: cuda_loops_mm.cu  cuda_loops_mm_driver.f90
src/modules/cuda_permute/: async_cuda_permute.cu  async_cuda_permute_driver.f90  cuda_generic_permute_kernel.cu  cuda_generic_permute_kernel.h  cuda_permute_generic.cu  cuda_permute_plugin.f90  cuda_tailored_permute_kernels.cu  cuda_tailored_permute_kernels.h  tailored_cuda_permute.cu  tailored_cuda_permute_driver.f90  tensor_permute_cuda.f90
src/modules/cuda_update/: cuda_siu_driver.f90  cuda_siu_impl.cu
src/modules/cutensor/: cutensor_driver_impl.cu  cutensor_tc_driver.f90
src/modules/hip_permute/: async_hip_permute.hip  async_hip_permute_driver.f90  hip_generic_permute_kernel.h  hip_generic_permute_kernel.hip  hip_permute_generic.hip  hip_permute_plugin.f90  hip_tailored_permute_kernels.h  hip_tailored_permute_kernels.hip  tailored_hip_permute.hip  tailored_hip_permute_driver.f90  tensor_permute_hip.f90
src/modules/magma_base/: magma.f90  magma_wrapper.c
src/modules/magma_bmm/: magma_bmm_driver.f90
src/modules/magma_mm/: magma_mm_driver.f90
src/modules/matrix_multiplication/: CMakeLists.txt  fortran_data_mm_driver.f90  intrinsic_mm_driver.f90  matrix_multiplication.f90  matrix_multiplication_api.f90  matrix_multiplication_dev.f90  mm_factory.f90  pointer_data_mm_driver.f90  raw_mm_driver.f90
src/modules/rocblas/: rocblas_mm_driver.f90  rocblas_wrapper.f90  rocblas_wrapper_implementation.hip
src/modules/tensor_contraction/: CMakeLists.txt  buffered_ttgt_tc_driver.f90  contraction_factory.f90  easy_tensor_contraction_interface.f90  tc_descriptor.f90  tc_index_helper.f90  tc_parser.f90  tc_ttgt.f90  tensor_contraction.f90  tensor_contraction_api.f90  tensor_contraction_dev.f90  tensor_contraction_loops.f90  ttgt_descriptor.f90  ttgt_parser.f90  unbuffered_ttgt_tc_driver.f90
src/modules/tensor_permute/: CMakeLists.txt  permute_factory.f90  raw_tensor_permute.f90  tensor_permute.f90  tensor_permute_api.f90  tensor_permute_dev.f90  tensor_permute_loops.f90
src/modules/tensor_update/: CMakeLists.txt  fortran_siu_driver.f90  scalar_inline_update.f90  tensor_update_api.f90  tensor_update_dev.f90  update_factory.f90
src/test/: CMakeLists.txt
src/test/api/: CMakeLists.txt
src/test/batched_matrix_multiplication/: CMakeLists.txt  batched_matrix_multiplication_package_test.f90  batched_matrix_multiplication_test.f90  batched_matrix_multiplication_test_helper.f90  test.info
src/test/batched_tensor_contraction/: CMakeLists.txt  batched_tensor_contraction_package_test.f90  batched_tensor_contraction_test.f90  batched_tensor_contraction_test_helper.f90  test.info
src/test/batched_tensor_permute/: CMakeLists.txt  batched_tensor_permute_package_test.f90  batched_tensor_permute_test.f90  batched_tensor_permute_test_helper.f90  test.info
src/test/blas/: blas_package_test.f90
src/test/cublas/: cublas_package_test.f90
src/test/cuda_mm/: cuda_mm_package_test.f90
src/test/cuda_permute/: cuda_permute_package_test.f90
src/test/cuda_update/: cuda_update_package_test.f90
src/test/cutensor/: cutensor_package_test.f90
src/test/hip_permute/: hip_permute_package_test.f90
src/test/magma_base/: magma_base_package_test.f90
src/test/magma_bmm/: magma_bmm_package_test.f90
src/test/magma_mm/: magma_mm_package_test.f90
src/test/matrix_multiplication/: CMakeLists.txt  matrix_multiplication_package_test.f90  matrix_multiplication_test.f90  matrix_multiplication_test_helper.f90  test.info
src/test/rocblas/: rocblas_package_test.f90
src/test/tensor_contraction/: CMakeLists.txt  tc_descriptor_test.f90  tc_index_helper_test.f90  tc_parser_test.f90  tensor_contraction_package_test.f90  tensor_contraction_test.f90  tensor_contraction_test_helper.f90  test.info  ttgt_parser_test.f90
src/test/tensor_permute/: CMakeLists.txt  permute_with_int64_sizes_test.f90  tensor_permute_package_test.f90  tensor_permute_test.f90  tensor_permute_test_helper.f90  test.info
src/test/tensor_update/: CMakeLists.txt  scalar_inline_update_test.f90  scalar_inline_update_test_helper.f90  tensor_update_package_test.f90  test.info
src/test/unittest/: CMakeLists.txt  unittest.F90
