add_library(
    ntcl_algorithms_tensor_contraction_test
    tensor_contraction_package_test.f90
    tensor_contraction_test.f90
    tensor_contraction_test_helper.f90
    ttgt_parser_test.f90
    tc_descriptor_test.f90
    tc_index_helper_test.f90
    tc_parser_test.f90
)
add_library(ntcl_algorithms::tensor_contraction_test ALIAS ntcl_algorithms_tensor_contraction_test)
target_include_directories(
    ntcl_algorithms_tensor_contraction_test
    PUBLIC
    ${CMAKE_CURRENT_BINARY_DIR}
)
target_link_libraries(
    ntcl_algorithms_tensor_contraction_test
    PUBLIC
    ntcl_util::api
    ntcl_data::api
    ntcl_tensor::api
    ntcl_algorithms_api
    ntcl_algorithms_tensor_contraction
)
